--- a/index.html
+++ b/index.html
@@ -7,18 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<style>
-			
+		body {
+			margin: 0px;
+			padding: 0px;
+			width: 100vw;
+			height: 100vh;
+		}
+
 		#app {
-			color:"red";
-			font-size: 13px;
-		}
-
-		#app .left {
-			width: 200px;
-		}
-
-		#app .right {
-			float: left;
+			height: 100%;
 			width: 100%;
 		}
 	</style>
@@ -26,8 +23,7 @@
 
 <body>
 	<div id="app">
-		<div class="left">left</div>
-		<div class="right">right</div>
+
 	</div>
 </body>
 
